--- a/Views/Products/Create2.cshtml
+++ b/Views/Products/Create2.cshtml
@@ -1,7 +1,7 @@
 @model WebApp1.products.Productwaarde
 @using Microsoft.AspNetCore.Http
 
-
+<link rel="stylesheet" href="~/css/product_creation_generic.css">
 
 
 <script type='text/javascript'>
@@ -30,26 +30,24 @@
 			}
 			window.onload = addFields;
     </script>
+<div class="pageRoot">
+    <h4>Products</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Create2">
+                <div id="container" class="form-group"></div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-default" />
+                </div>
+            </form>
+        </div>
+    </div>
 
-<h2>kaas</h2>
-
-<h4>Products</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create2">
-            <div id="container" class="form-group"></div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </form>
+    <div>
+        <a asp-action="Index">Back to List</a>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
