Fixed styling on upload files

--- a/Views/UploadFiles/Index.cshtml
+++ b/Views/UploadFiles/Index.cshtml
@@ -1,6 +1,6 @@
+<link rel="stylesheet" href="~/css/product_creation_generic.css">
 <div class="pageRoot">
     <div class="row">
-        <h2>kaas</h2>
         <form method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <div class="col-md-10">
