--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
           <a class="dropdown-item" href="@Url.Action("Create", "Products")">Maak product soort aan</a>
           <a class="dropdown-item" href="@Url.Action("Create2", "Products")">Voeg product toe</a>
           <a class="dropdown-item" href="@Url.Action("Index", "UploadFiles")">Voeg meerdere producten</a>
+          <a class="dropdown-item" href="@Url.Action("Index", "products")">overzicht product soorten</a>
+          <a class="dropdown-item" href="@Url.Action("Indexproductwaarde", "products")">overzicht product waarden</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="@Url.Action("Statistics", "Chart")">Site Statistieken</a>
         </div>
