--- a/Views/Home/Mainpage.cshtml
+++ b/Views/Home/Mainpage.cshtml
@@ -1,83 +1,92 @@
 
 
+@using WebApp1.products
 @model IEnumerable<WebApp1.products.Productwaarde>
 @{
-    Layout = "";
+    bool firstColumn = true;
+    List<Productwaarde> remainingItems = new List<Productwaarde>();
  }
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+<link rel="stylesheet" href="~/css/mainpage.css">
 
-
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Webshop</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="@Url.Action("Mainpage", "Home")">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Admin
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="@Url.Action("Create", "Products")">Maak product soort aan</a>
-          <a class="dropdown-item" href="@Url.Action("Create2", "Products")">Voeg product toe</a>
-          <a class="dropdown-item" href="@Url.Action("Index", "UploadFiles")">Voeg meerdere producten</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="@Url.Action("Statistics", "Chart")">Site Statistieken</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-    <partial name="_LoginPartial" />
-
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>  
-<br>
-
-<h2>Boten</h2>
-
-<h4>Products</h4>
 @{
     //var hi= (ViewData["productsoorten"]);
     var productst = Context.Session.Get<String>("productsoort");
 }
 
-<div class="row" >
-@foreach (var item in Model)
-        {
-              
-                    <div class="col">
-                        <div class="card" style="width: 25rem;">
-                            <div class="card-body">
-                                <form action="@Url.Action("Index", "ViewProduct")" method="get">
-                                    <div id="container" class="form-group">
-                                        <h5 class="card-title" >@item.Title</h5>
-                                        <p class="card-text" >€ @item.Price</p>
-                                        <input type="hidden" name = "id" value =  '@item.Id' />
-                                        <input type="submit" class="btn btn-primary" value="Details">
-                                    </div>
-                             </form> 
-                            </div>
+
+<div class="row">
+    <div class="col-2">
+        <div id="categoryArea">
+            <div class="categoryTitle">Categorie</div>
+            <form asp-action="Mainpage">
+                <div id="container1" class="form-group">
+                    Select all<input type="radio" name="hi" value="select all"><br>
+                </div>
+                <div id="container" class="form-group"></div>
+                <div class="form-group">
+                    <input type="submit" value="Ga naar Categorie" class="btn btn-default" id="btnSelectCategory"/>
+                </div>
+            </form>
+            <div>
+                <a asp-action="Index">Terug naar alle producten</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-8">
+        <div class="container" id="productsArea">
+        <h2>Boten</h2>
+        <h4>Producten</h4>
+        <div class="row" id="products">
+        <div class="col-sm">
+            @foreach (var item in Model)
+            {
+                if (firstColumn)
+                {
+                    <div class="card" style="width: 25rem;">
+                        <div class="card-body">
+                            <form action="@Url.Action("Index", "ViewProduct")" method="get">
+                                <div id="container" class="form-group">
+                                    <img src="~/images/boat.jpg" id="productImage"><img/>
+                                    <h5 class="card-title">@item.Title</h5>
+                                    <p class="card-text">€ @item.Price</p>
+                                    <input type="hidden" name="id" value='@item.Id'/>
+                                    <input type="submit" class="btn btn-primary" value="Details">
+                                </div>
+                            </form>
                         </div>
                     </div>
-                     <div class="w-100"></div>
-                    <br>
-                
-
-        }
+                    firstColumn = false;
+                }
+                else
+                {
+                    remainingItems.Add(item);
+                    firstColumn = true;
+                }
+            }
+        </div>
+        <div class="col-sm">
+            @foreach (Productwaarde item in remainingItems)
+            {
+                <div class="card" style="width: 25rem;">
+                    <div class="card-body">
+                        <form action="@Url.Action("Index", "ViewProduct")" method="get">
+                            <div id="container" class="form-group">
+                                <img src="~/images/boat.jpg" id="productImage"><img/>
+                                <h5 class="card-title">@item.Title</h5>
+                                <p class="card-text">€ @item.Price</p>
+                                <input type="hidden" name="id" value='@item.Id'/>
+                                <input type="submit" class="btn btn-primary" value="Details">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
 </div>
-
+    </div>
+</div>
 <script type='text/javascript'>
 var names = @Html.Raw(Json.Serialize(ViewData["productsoorten"]));
     //var serializedUsers = JSON.parse(names);
@@ -104,30 +113,6 @@ var names = @Html.Raw(Json.Serialize(ViewData["productsoorten"]));
 			}
 			window.onload = addFields;
 </script>
-
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Mainpage">
-            <div id="container1" class="form-group">
-                 Select all<input type="radio" name="hi" value="select all"><br>
-            </div>
-            <div id="container" class="form-group"></div>
-            <div class="form-group">
-                <input type="submit" value="Filter" class="btn btn-default" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 
          
