Added styling to login + Admin dropdown only visible if logged in as admin

--- a/Views/Home/Mainpage.cshtml
+++ b/Views/Home/Mainpage.cshtml
@@ -18,7 +18,7 @@
 <div class="row">
     <div class="col-2">
         <div id="categoryArea">
-            <div class="categoryTitle">Categorie</div>
+            <div class="categoryTitle">Categorieën</div>
             <form asp-action="Mainpage">
                 <div id="container1" class="form-group">
                     Select all<input type="radio" name="hi" value="select all"><br>
