--- a/Areas/Identity/Pages/_ViewStart.cshtml
+++ b/Areas/Identity/Pages/_ViewStart.cshtml
@@ -1,3 +1,25 @@
 ﻿@{
     Layout = "/Views/Shared/_Layout.cshtml";
 }
+
+<style>
+    h2 {
+        background-color: #ffffff;
+        border-radius: 3px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        padding: 15px;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+    
+    div.row {
+        background-color: #ffffff;
+        border-radius: 3px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        padding: 15px;
+        margin-left: 10%;
+        margin-right: 10%;
+        margin-bottom: 10%;
+        margin-top: 20px;
+    }
+</style>
