--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -18,8 +18,8 @@
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="Identity" asp-page="/Account/Register">Register</a></li>
-        <li><a asp-area="Identity" asp-page="/Account/Login">Login</a></li>
+    <ul class="nav navbar-nav navbar-right" id="accountLinks">
+        <li id="registerLink"><a asp-area="Identity" asp-page="/Account/Register">Register</a></li>
+        <li id="registerLink"><a asp-area="Identity" asp-page="/Account/Login">Login</a></li>
     </ul>
 }
