--- a/Views/viewProduct/Index.cshtml
+++ b/Views/viewProduct/Index.cshtml
@@ -3,15 +3,19 @@
     List<ViewProductAttributes> attributes = (List<ViewProductAttributes>) ViewData["ProductAttributeModel"];
 }
 <link rel="stylesheet" href="~/css/view_product.css">
-<div class="pageBackground">  
+<div class="pageBackground">
+    <div id="category">Categorie: @viewProductModel.Category</div>
     <div class="row" id="productHeader">
         <div class="col-6">
-            <h2>@viewProductModel.Name</h2>
             <img src="~/images/boat.jpg" height="300" width="400" class="productImage"></img>
         </div>
-        <div class="col-6">
-            <div id="price">Prijs: @viewProductModel.Price</div>
-            <div id="category">Categorie: @viewProductModel.Category</div>
+        <div class="col-6" id="productContent">
+            <h2>@viewProductModel.Name</h2>
+            <div class="description">
+                <div class="descriptionTitle">BESCHRIJVING</div>
+                <div class="descriptionContent">This is a sample product description. It's meant to be a short discription what the product is about.This is a sample product description. It's meant to be a short discription what the product is about.This is a sample product description. It's meant to be a short discription what the product is about.</div>
+            </div>
+            <div id="price">@viewProductModel.Price</div>
             <button type="submit" class="CartBtn">Zet in Winkelwagen</button>
         </div>
     </div>
@@ -37,7 +41,7 @@
     }
     else
     {
-        <h3>Geen product eigenschappen beschikbaar!</h3>
+        <h3 id="no-attributes-warning">Geen product eigenschappen beschikbaar!</h3>
     }
 
 </div>
