Fix image upload

--- a/Views/Products/Create3.cshtml
+++ b/Views/Products/Create3.cshtml
@@ -65,7 +65,7 @@
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="Create3">
+            <form asp-action="Create3" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Title" class="control-label"></label>
@@ -81,6 +81,11 @@
                     <label asp-for="ProductsoortId" class="control-label"></label>
                     <input asp-for="ProductsoortId" class="form-control" placeholder="ProductsoortId" type="hidden"  value= "@productsoortid" />
                     <span asp-validation-for="ProductsoortId" class="text-danger"></span>
+                </div>
+
+                 <div class="form-group">
+                <input asp-for="Image" type="file" Class="form-control" placeholder="Image"/>
+                <span asp-validation-for="Image" class="text-danger"></span>
                 </div>
            
                 <div id="container" class="form-group"></div>
