--- a/Views/Products/Create3.cshtml
+++ b/Views/Products/Create3.cshtml
@@ -83,6 +83,12 @@
                     <span asp-validation-for="ProductsoortId" class="text-danger"></span>
                 </div>
 
+                <div class="form-group">
+                    <label asp-for="Description" class="control-label"></label>
+                    <input asp-for=" Description" class="form-control" placeholder="Description"/>
+                    <span asp-validation-for=" Description" class="text-danger"></span>
+                </div>
+
                  <div class="form-group">
                 <input asp-for="Image" type="file" Class="form-control" placeholder="Image"/>
                 <span asp-validation-for="Image" class="text-danger"></span>
