Added: link on header to user management + added basic styling to that page

--- a/Views/UserManagement/AddRole.cshtml
+++ b/Views/UserManagement/AddRole.cshtml
@@ -1,9 +1,13 @@
 ﻿@model UserManagementAddRole
-
-<h3>Add Role For @Model.Email</h3>
-<div asp-validation-summary="All"></div>
-<form asp-controller="UserManagement" asp-action="AddRole">
-    <input asp-for="UserId" type="hidden" />
-    <select asp-for="NewRole" asp-items="Model.Roles"></select>
-    <input type="submit" value="Add Role" />
-</form>
+<link rel="stylesheet" href="~/css/product_creation_generic.css">
+<div class="pageRoot">
+    <h3>Add Role For @Model.Email</h3>
+    <hr>
+    <br>
+    <div asp-validation-summary="All"></div>
+    <form asp-controller="UserManagement" asp-action="AddRole">
+        <input asp-for="UserId" type="hidden" />
+        <select asp-for="NewRole" asp-items="Model.Roles"></select>
+        <input type="submit" value="Add Role" />
+    </form>
+</div>
