--- a/Areas/Identity/Pages/_ViewStart.cshtml
+++ b/Areas/Identity/Pages/_ViewStart.cshtml
@@ -13,6 +13,15 @@
         margin-right: 10%;
     }
     
+    h4 {
+        background-color: #ffffff;
+        border-radius: 3px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        padding: 15px;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+    
     div.row {
         background-color: #ffffff;
         border-radius: 3px;
