--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                     <a class="dropdown-item" href="@Url.Action("Indexproductwaarde", "products")">Overzicht product waarden</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="@Url.Action("Statistics", "Chart")">Site Statistieken</a>
+                    <a class="dropdown-item" href="@Url.Action("Index", "UserManagement")">Gebruikers beheren</a>
                 </div>
             }
         </li>
